2006-09-02  Christophe Bliard  <christophe.bliard@trux.info>

	* fr/fr.po: Updated French translation.
	* fr/figures/*.png: Updated screenshots.

2006-08-31  Joachim Noreiko  <jnoreiko@yahoo.com>

	* C/gedit.xml: Snippets: python and shell placeholders

=== gedit 2.15.9 ===

2006-08-26  Joachim Noreiko  <jnoreiko@yahoo.com>

	* C/gedit.xml:
	   new section on External Tools plugin
	   new section on Python Console plugin

2006-08-25  Joachim Noreiko  <jnoreiko@yahoo.com>

	* C/gedit.xml:
	   new section on Modelines plugin
	   more detail on Snippets plugin: $GEDIT_CURRENT_WORD

2006-08-24  Joachim Noreiko  <jnoreiko@yahoo.com>

	* C/gedit.xml:
	   changed the chunking depth -- should be easier to navigate
	   general overhaul and updating of the Plugins section

2006-08-23  Joachim Noreiko  <jnoreiko@yahoo.com>

	* C/gedit.xml: corrections to Snippets section (bug #352428)

2006-08-22  Francisco Javier F. Serrador  <serrador@openshine.com>

	* es/es.po: Updated Spanish translation.
	* es/figures/gedit_window.png: Updated screenshot

=== gedit 2.15.8 ===

2006-08-21  Joachim Noreiko  <jnoreiko@yahoo.com>

	* C/gedit.xml: 
    new section on the Snippets plugin
    rewritten intro
    tidied up section on Find & Replace Special Characters
    standardized titles

2006-08-19  Joachim Noreiko  <jnoreiko@yahoo.com>

	* C/gedit.xml: 
	mention side pane and bottom pane
	mention tag list in section on programming features
	reworded a number of titles

=== gedit 2.15.7 ===

2006-08-12  Francisco Javier F. Serrador  <serrador@openshine.com>

	* es/es.po: Updated Spanish translation by María Majadas.

=== gedit 2.15.6 ===

=== gedit 2.15.5 ===

2006-07-23  Daniel Nylander <po@danielnylander.se>

	* sv/sv.po: Added Swedish translation.
	* sv/*.xml: Removed obsolete files.
	* Makefile.am: Added sv to DOC_LINGUAS.

2006-07-14 Joachim Noreiko <jnoreiko@yahoo.com>

	* C/figures/gedit_window.png: update screenshot for Clearlooks (taken on 2.14)
	* C/gedit.xml: 