@@ -1330,6 +1330,27 @@
   </sect3>
 </sect2>
 
+<sect2 id="gedit-file-browser-plugin">    
+  <title>File Browser Plugin</title>
+  <para>The <application>File Browser</application> Plugin shows your files and folders in the side pane, allowing you to quickly open files.</para>
+  <para>To view the File Browser, choose <menuchoice><guimenu>View</guimenu> <guimenuitem>Side Pane</guimenuitem> </menuchoice> and then click on the tab showing the File Browser icon at the bottom of the side pane.</para>
+  <sect3 id="gedit-file-browser-plugin-browsing">    
+    <title>Browsing your Files</title>
+    <para>The File Browser tab initially shows your file manager bookmarks. To browse the contents of any item, double-click it.</para>
+    <para>To show a parent folder, choose from the drop-down list, or press the up arrow on the File Browser's toolbar.</para>
+    <para>To show the folder that contains the document you are currently working on, right-click in the file list and choose <guimenuitem>Set root to active document</guimenuitem>.</para>
+  </sect3>
+  <sect3 id="gedit-file-browser-plugin-open">    
+    <title>Opening a File</title>
+    <para>To open a file in <application>&app;</application>, double-click it in the file list.</para>
+  </sect3>
+  <sect3 id="gedit-file-browser-plugin-create">    
+    <title>Creating Files and Folders</title>
+    <para>To create a new, empty text file in the current folder shown in the browser, right-click in the file list and choose <guimenuitem>New File</guimenuitem>.</para>
+    <para>To create a new folder in the current folder shown in the browser, right-click in the file list and choose <guimenuitem>New Directory</guimenuitem>.</para>
+    </sect3>
+</sect2>
+
 <sect2 id="gedit-indent-lines-plugin">
 <title>Indent Lines Plugin</title>
 	<para>The <application>Indent Lines</application> plugin adds or removes space from the beginning of lines of text.</para>
