@@ -1,3 +1,7 @@
+2006-09-02  Joachim Noreiko  <jnoreiko@yahoo.com>
+
+	* C/gedit.xml: File Browser: new section, covers basic usage
+
 2006-09-02  Christophe Bliard  <christophe.bliard@trux.info>
 
 	* fr/fr.po: Updated French translation.
